--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-# You probably already put this in
-set prefix C-a
-
+set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+
+set -g mouse on
+set-option -g history-limit 9999
