tweak tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
+# C-a as prefix
 set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+# enable mouse
 set -g mouse on
 set-option -g history-limit 9999
+
+# setting the delay between prefix and command
+set -s escape-time 5
