--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,11 @@ set-option -g history-limit 9999
 
 # setting the delay between prefix and command
 set -s escape-time 5
+
+# vi mode
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'Y' copy-end-of-line
+
+
